Top Navigation Bar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "fonts",
         "Mode",
         "mulish",
+        "responsivenees",
         "scaffold",
         "Stateless",
         "Upwards",
